--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.9",
     "swiper": "^9.2.2"
