--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "swiper": "^9.2.2"
   },
   "devDependencies": {
+    "@styled/typescript-styled-plugin": "^1.0.0",
     "@types/react": "^18.0.28",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.11",
@@ -34,7 +35,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "^4.9.3",
+    "typescript": "^4.9.5",
     "vite": "^4.2.0"
   }
 }
