--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
       "camelcase": ["error", {"allow": ["^.*_.*$"]}],
       "spaced-comment": "error",
       "quotes": ["error", "single"],
-      "no-duplicate-imports": "error"
+      "no-duplicate-imports": "error",
+      "no-console": "error"
     },
     "settings": {
       "react": {
