--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^2.16.0",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "react-transition-group": "^4.4.5",
     "rollup-plugin-react-scoped-css": "^0.8.2",
     "styled-components": "^5.3.9",
     "swiper": "^9.2.2"
@@ -25,6 +27,7 @@
     "@types/react": "^18.0.28",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.11",
+    "@types/react-transition-group": "^4.4.6",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
