:package: (All): Added dependencies to test with react.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tabler/icons-react": "^2.16.0",
     "framer-motion": "^10.12.16",
+    "jsdom": "^22.1.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@styled/typescript-styled-plugin": "^1.0.0",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.28",
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "^18.0.11",
@@ -38,6 +40,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^4.9.5",
-    "vite": "^4.2.0"
+    "vite": "^4.3.9",
+    "vitest": "^0.32.2"
   }
 }
